--- a/css/compiled.css
+++ b/css/compiled.css
@@ -14,7 +14,15 @@ h1 {
   margin: auto; }
 
 .box {
-  height: 150px; }
+  height: 250px;
+  margin-bottom: 5px; }
+
+.card {
+  border: 1px solid #fff;
+  width: 180px;
+  height: 100%;
+  margin: auto;
+  border-radius: 5px; }
 
 @font-face {
   font-family: 'Raleway';
