--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -18,5 +18,14 @@ h1 {
 }
 
 .box {
-	height: 150px;
+	height: 250px;
+	margin-bottom: 5px;
+}
+
+.card {
+	border: 1px solid #fff;
+	width: 180px;
+	height: 100%;
+	margin: auto;
+	border-radius: 5px;
 }
