dynamic card creation functionality is working

--- a/css/compiled.css
+++ b/css/compiled.css
@@ -14,15 +14,24 @@ h1 {
   margin: auto; }
 
 .box {
-  height: 250px;
+  height: 100px;
   margin-bottom: 5px; }
 
 .card {
   border: 1px solid #fff;
-  width: 180px;
+  width: 60px;
   height: 100%;
   margin: auto;
   border-radius: 5px; }
+
+.deal-button {
+  background: #ff0;
+  border: none;
+  font-size: 20px;
+  padding: 20px;
+  width: 100%; }
+  .deal-button:hover {
+    cursor: pointer; }
 
 @font-face {
   font-family: 'Raleway';
