--- a/css/compiled.css
+++ b/css/compiled.css
@@ -85,8 +85,8 @@ h2 {
 
 .card {
   border: 1px solid #fff;
-  width: 120px;
-  height: 180px;
+  width: 73px;
+  height: 98px;
   margin: auto;
   border-radius: 5px; }
 
@@ -102,4 +102,8 @@ h2 {
 .card-wrapper {
   display: block; }
   .card-wrapper .card {
+    color: #222;
+    background: #fff;
+    border: 1px solid #222;
     display: inline-block; }
+
