--- a/sass/project-styles.scss
+++ b/sass/project-styles.scss
@@ -1,4 +1,5 @@
 $green: #016f30;
+$red: #FF0008;
 
 body {
 	background: $green;
@@ -41,8 +42,8 @@ h2 {
 
 .card {
 	border: 1px solid #fff;
-	width: 120px;
-	height: 180px;
+	width: 73px;
+	height: 98px;
 	margin: auto;
 	border-radius: 5px;
 }
@@ -63,6 +64,13 @@ h2 {
 	display: block;
 
 	.card {
+		color: #222;
+		background: #fff;
+		border: 1px solid #222;
 		display: inline-block;
 	}
+}
+
+.hearts {
+
 }
