--- a/sass/project-styles.scss
+++ b/sass/project-styles.scss
@@ -31,7 +31,7 @@ h2 {
 
 .wrapper {
 	width: 500px;
-	margin: 20px auto;
+	margin: 10px auto;
 }
 
 .box {
@@ -42,8 +42,8 @@ h2 {
 
 .card {
 	border: 1px solid #fff;
-	width: 73px;
-	height: 98px;
+	width: 120px;
+	height: 180px;
 	margin: auto;
 	border-radius: 5px;
 }
@@ -62,15 +62,17 @@ h2 {
 
 .card-wrapper {
 	display: block;
-
-	.card {
-		color: #222;
-		background: #fff;
-		border: 1px solid #222;
-		display: inline-block;
-	}
 }
 
-.hearts {
+.card {
+	color: #222;
+	background: #fff;
+	border: 1px solid #222;
+	display: inline-block;
 
+	div {
+		padding: 10px 5px 3px 5px;
+		text-align: center;
+		width: 30px;
+	}
 }
