--- a/sass/project-styles.scss
+++ b/sass/project-styles.scss
@@ -74,13 +74,13 @@ h2 {
 		padding: 10px 5px 3px 5px;
 		text-align: center;
 		width: 30px;
-	}
 
-	.red {
-		color: $red;
-	}
+		&.red {
+			color: $red;
+		}
 
-	.black {
-		color: #000;
+		&.black {
+			color: #000;
+		}
 	}
 }
