--- a/css/project-styles.css
+++ b/css/project-styles.css
@@ -36,7 +36,7 @@ h2 {
 
 .box {
   margin-bottom: 5px;
-  background: #015b26;
+  background: #015b27;
   padding: 20px; }
 
 .card-wrapper {
@@ -54,7 +54,7 @@ h2 {
   border: none;
   font-size: 20px;
   padding: 20px;
-  width: 100%; }
+  width: 40%; }
   .deal-button:hover {
     cursor: pointer; }
 
@@ -71,6 +71,6 @@ h2 {
     text-align: center;
     font-size: 200%; }
     .card div.red {
-      color: #FF0008; }
+      color: #ff0008; }
     .card div.black {
       color: #000; }
