--- a/sass/compiled.scss
+++ b/sass/compiled.scss
@@ -1,3 +1,3 @@
-@import 'sass/partials/_base';
-@import 'sass/partials/_fonts';
-@import 'sass/project-styles';
+@import 'partials/_base';
+@import 'partials/_fonts';
+@import 'project-styles';
