--- a/css/compiled.css
+++ b/css/compiled.css
@@ -27,6 +27,11 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+.actions:after {
+  content: "";
+  display: table;
+  clear: both; }
+
 @font-face {
   font-family: 'Raleway';
   font-style: normal;
@@ -133,4 +138,54 @@ h2 {
       color: #000; }
 
 .score {
+  float: right;
+  color: #ff0;
   font-weight: bold; }
+
+.actions {
+  position: relative;
+  width: 100%;
+  background-color: #f3f3f3; }
+
+.in-game {
+  position: absolute;
+  top: 0;
+  z-index: 5;
+  width: 100%;
+  display: none; }
+
+.bets {
+  position: absolute;
+  top: 0;
+  z-index: 10;
+  width: 100%; }
+  .bets li {
+    display: inline-block;
+    width: 70px; }
+
+a.chip {
+  position: relative;
+  text-align: center;
+  display: inline-block;
+  color: #fff;
+  width: 100%;
+  height: 70px;
+  border-radius: 70px;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 20px; }
+  a.chip span {
+    position: relative;
+    top: 33.33333%; }
+  a.chip[data-value="1"] {
+    background-color: #f00; }
+  a.chip[data-value="5"] {
+    background-color: #cc2525; }
+  a.chip[data-value="25"] {
+    background-color: #19622a; }
+  a.chip[data-value="100"] {
+    background-color: #000; }
+  a.chip[data-value="500"] {
+    background-color: #8c0a91; }
+  a.chip[data-value="1000"] {
+    background-color: #ff7b00; }
