--- a/sass/project-styles.scss
+++ b/sass/project-styles.scss
@@ -107,5 +107,77 @@ h2 {
 }
 
 .score {
+	float: right;
+	color: #ff0;
 	font-weight: bold;
+}
+
+.actions {
+	position: relative;
+	width: 100%;
+	background-color: #f3f3f3;
+
+	@extend %clearfix;
+}
+
+.in-game {
+	position: absolute;
+	top: 0;
+	z-index: 5;
+	width: 100%;
+	display: none;
+}
+
+.bets {
+	position: absolute;
+	top: 0;
+	z-index: 10;
+	width: 100%;
+
+	li {
+		display: inline-block;
+		width: 70px;
+	}
+}
+
+a.chip {
+	position: relative;
+	text-align: center;
+	display: inline-block;
+	color: #fff;
+	width: 100%;
+	height: 70px;
+	border-radius: 70px;
+	text-decoration: none;
+	font-weight: 600;
+	font-size: 20px;
+
+	span {
+		position: relative;
+		top: (100%/3);
+	}
+
+	&[data-value="1"]{
+		background-color: #f00;
+	}
+
+	&[data-value="5"]{
+		background-color: #cc2525;
+	}
+
+	&[data-value="25"]{
+		background-color: #19622a;
+	}
+
+	&[data-value="100"]{
+		background-color: #000;
+	}
+
+	&[data-value="500"]{
+		background-color: #8c0a91;
+	}
+
+	&[data-value="1000"]{
+		background-color: #ff7b00;
+	}
 }
