--- a/css/compiled.css
+++ b/css/compiled.css
@@ -27,11 +27,6 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
-.actions:after {
-  content: "";
-  display: table;
-  clear: both; }
-
 @font-face {
   font-family: 'Raleway';
   font-style: normal;
@@ -119,6 +114,8 @@ h2 {
   background: #ff0; }
   .deal-button:hover {
     cursor: pointer; }
+  .deal-button.is-hidden {
+    display: none; }
 
 .card-wrapper {
   display: block; }
@@ -142,26 +139,27 @@ h2 {
   color: #ff0;
   font-weight: bold; }
 
-.actions {
-  position: relative;
-  width: 100%;
-  background-color: #f3f3f3; }
+.bets {
+  position: fixed;
+  top: 10px;
+  left: 0;
+  z-index: 10;
+  width: 250px; }
+  .bets li {
+    display: inline-block;
+    width: 90px; }
 
-.in-game {
-  position: absolute;
-  top: 0;
+.actions {
   z-index: 5;
   width: 100%;
   display: none; }
+  .actions.is-shown {
+    display: inline-block; }
 
-.bets {
-  position: absolute;
-  top: 0;
-  z-index: 10;
-  width: 100%; }
-  .bets li {
-    display: inline-block;
-    width: 70px; }
+.secondary-actions {
+  display: none; }
+  .secondary-actions.is-shown {
+    display: block; }
 
 a.chip {
   position: relative;
@@ -169,24 +167,50 @@ a.chip {
   display: inline-block;
   color: #fff;
   width: 100%;
-  height: 70px;
-  border-radius: 70px;
+  height: 90px;
+  border-radius: 90px;
   text-decoration: none;
   font-weight: 600;
-  font-size: 20px; }
+  font-size: 20px;
+  text-shadow: 0px 1px 0px #000;
+  border: 10px dotted #fff;
+  box-shadow: 0 3px 3px #000; }
   a.chip:before {
     position: relative;
     top: 33.33333%;
     content: attr(data-value); }
   a.chip[data-value="1"] {
-    background-color: #f00; }
+    background-color: #045391; }
   a.chip[data-value="5"] {
     background-color: #cc2525; }
   a.chip[data-value="25"] {
-    background-color: #19622a; }
+    background-color: #33894C; }
   a.chip[data-value="100"] {
     background-color: #000; }
   a.chip[data-value="500"] {
     background-color: #8c0a91; }
   a.chip[data-value="1000"] {
     background-color: #ff7b00; }
+
+.wager-total {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 160px;
+  padding: 10px;
+  background-color: #323232;
+  color: #fff;
+  font-size: 20px; }
+  .wager-total .amount {
+    margin-bottom: 10px; }
+  .wager-total h3 {
+    padding: 10px;
+    background-color: #4c4c4c; }
+    .wager-total h3 + div {
+      padding: 10px;
+      text-align: right;
+      color: #ff0;
+      font-weight: 600;
+      font-size: 30px; }
+  .wager-total .warning {
+    color: #FF0008; }
