--- a/sass/project-styles.scss
+++ b/sass/project-styles.scss
@@ -79,6 +79,10 @@ h2 {
 	&:hover {
 		cursor: pointer;
 	}
+
+	&.is-hidden {
+		display: none;
+	}
 }
 
 .card-wrapper {
@@ -112,31 +116,34 @@ h2 {
 	font-weight: bold;
 }
 
-.actions {
-	position: relative;
-	width: 100%;
-	background-color: #f3f3f3;
-
-	@extend %clearfix;
-}
-
-.in-game {
-	position: absolute;
-	top: 0;
-	z-index: 5;
-	width: 100%;
-	display: none;
-}
-
 .bets {
-	position: absolute;
-	top: 0;
+	position: fixed;
+	top: 10px;
+	left: 0;
 	z-index: 10;
-	width: 100%;
+	width: 250px;
 
 	li {
 		display: inline-block;
-		width: 70px;
+		width: 90px;
+	}
+}
+
+.actions {
+	z-index: 5;
+	width: 100%;
+	display: none;
+
+	&.is-shown {
+		display: inline-block;
+	}
+}
+
+.secondary-actions {
+	display: none;
+
+	&.is-shown {
+		display: block;
 	}
 }
 
@@ -146,11 +153,14 @@ a.chip {
 	display: inline-block;
 	color: #fff;
 	width: 100%;
-	height: 70px;
-	border-radius: 70px;
+	height: 90px;
+	border-radius: 90px;
 	text-decoration: none;
 	font-weight: 600;
 	font-size: 20px;
+	text-shadow: 0px 1px 0px #000;
+    border: 10px dotted #fff;
+    box-shadow: 0 3px 3px #000;
 
 	// used :before because doing spans were causing click issues
 	&:before {
@@ -160,7 +170,7 @@ a.chip {
 	}
 
 	&[data-value="1"]{
-		background-color: #f00;
+		background-color: #045391;
 	}
 
 	&[data-value="5"]{
@@ -168,7 +178,7 @@ a.chip {
 	}
 
 	&[data-value="25"]{
-		background-color: #19622a;
+		background-color: #33894C;
 	}
 
 	&[data-value="100"]{
@@ -181,5 +191,37 @@ a.chip {
 
 	&[data-value="1000"]{
 		background-color: #ff7b00;
+	}
+}
+
+.wager-total {
+	position: fixed;
+	top: 0;
+	right: 0;
+	width: 160px;
+	padding: 10px;
+	background-color: #323232;
+	color: #fff;
+	font-size: 20px;
+
+	.amount {
+		margin-bottom: 10px;
+	}
+
+	h3 {
+		padding: 10px;
+		background-color: lighten(#323232, 10%);
+
+		& + div {
+			padding: 10px;
+			text-align: right;
+			color: #ff0;
+			font-weight: 600;
+			font-size: 30px;
+		}
+	}
+
+	.warning {
+		color: $red;
 	}
 }
