--- a/css/project-styles.css
+++ b/css/project-styles.css
@@ -27,7 +27,7 @@ h2 {
   padding: 20px;
   display: inline-block;
   cursor: pointer;
-  width: 32%; }
+  width: 100%; }
 
 .wrapper {
   margin: 10px auto;
@@ -102,6 +102,8 @@ h2 {
   display: none; }
   .actions.is-shown {
     display: inline-block; }
+  .actions .button {
+    width: 32%; }
 
 .secondary-actions {
   display: none; }
