--- a/sass/project-styles.scss
+++ b/sass/project-styles.scss
@@ -35,7 +35,7 @@ h2 {
 	padding: 20px;
 	display: inline-block;
 	cursor: pointer;
-	width: 32%;
+	width: 100%;
 }
 
 .wrapper {
@@ -145,6 +145,10 @@ h2 {
 
 	&.is-shown {
 		display: inline-block;
+	}
+
+	.button {
+		width: 32%;
 	}
 }
 
