fix secondary button "is-shown" class style and register other in-game button events"

--- a/css/compiled.css
+++ b/css/compiled.css
@@ -169,7 +169,7 @@ h2 {
 .secondary-actions {
   display: none; }
   .secondary-actions.is-shown {
-    display: block; }
+    display: inline; }
 
 a.chip {
   position: relative;
