--- a/css/compiled.css
+++ b/css/compiled.css
@@ -147,7 +147,8 @@ h2 {
   width: 250px; }
   .bets li {
     display: inline-block;
-    width: 90px; }
+    width: 90px;
+    margin-right: 30px; }
 
 .bets-off {
   position: fixed;
