--- a/css/compiled.css
+++ b/css/compiled.css
@@ -111,9 +111,12 @@ h2 {
   border-radius: 5px; }
 
 .deal-button {
-  background: #ff0; }
+  background: #ff0;
+  display: none; }
   .deal-button:hover {
     cursor: pointer; }
+  .deal-button.is-shown {
+    display: inline-block; }
   .deal-button.is-hidden {
     display: none; }
 
@@ -239,3 +242,5 @@ a.chip {
 
 .new-game-button {
   display: none; }
+  .new-game-button.is-shown {
+    display: inline-block; }
