--- a/css/compiled.css
+++ b/css/compiled.css
@@ -162,8 +162,10 @@ h2 {
   height: 400px; }
 
 .actions {
+  position: absolute;
+  left: 0;
   z-index: 5;
-  width: 100%;
+  width: 300px;
   display: none; }
   .actions.is-shown {
     display: inline-block; }
